# Minishell1

./: CMakeLists.txt  Makefile  README.md  SUMMARY.md
include/: cly_linked_list.h  minishell1.h
lib/cly/: Makefile
lib/cly/cly_string/: cly_dyn_strapnd_chr.c  cly_str_split.c  cly_strapnd_chr.c  cly_strapnd_str.c  cly_strnapnd_str.c
src/: command_cd.c  command_env.c  command_pwd.c  command_setenv.c  execute.c  get_args.c  get_env_var.c  get_path.c  minishell.c  set_env_var.c
